--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,21 @@
-body {
+* {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  
+  margin: 0;
+  padding: 0;
+  border: none
 }
 .indexClass{
-  border: 2px black solid;
-  height: 100vh         
+ 
+  height: 100vh;
+          
+}
+.inputContainer{
+  height: 300px;
+}.message{
+  margin-left: 350px;
+  
+}
+.myCard{
+  border-radius: 20px;
+  background-color: coral;
 }
