--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,6 @@
-<div class="container d-flex justify-content-center align-items-center indexClass ">
-<h1>Welcome to Coding Competition #2 by {{title}} , NORKA B3”.</h1>
+<div class=" indexClass d-flex justify-content-center align-items-center">
+    <form action="/home" >
+        <h1>Welcome to Coding Competition #2 by {{title}} , NORKA B3”.</h1>
+        <button  type="submit" class="btn btn-success message">Enter</button>
+    </form>
 </div>
