--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,5 @@
 <div class="indexClass    d-flex align-items-center justify-content-center">
-    <form action="/home" method="post">
+    <form action="/mailer" method="post">
         <div class="border p-5 myCard inputContainer d-flex flex-column align-items-center justify-content-center ">
             
             <label for="exampleInputEmail1" class="form-label m-5">Enter your Email address</label>
