--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,7 +3,7 @@
         <div class="border p-5 myCard inputContainer d-flex flex-column align-items-center justify-content-center ">
             
             <label for="exampleInputEmail1" class="form-label m-5">Enter your Email address</label>
-            <input type="email" class="form-control m-5" id="exampleInputEmail1" name="email">
+            <input type="email" class="form-control m-5" pattern="^[A-Z0-9._%+-]+@[A-Z0-9.-]+\.[A-Z]{2,4}$" name="email" placeholder="Email adress">
             <button type="submit" class="btn btn-success m-5">Send Email</button>
         </div>
     </form>
