--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <div class=" indexClass d-flex justify-content-center align-items-center">
-    <form action="/home" class="d-flex flex-column align-items-center justify-content-center" >
+    <form action="/home" class="d-flex flex-column align-items-center justify-content-center introPage" >
         <h1>Welcome to Coding Competition #2 by {{title}} , NORKA B2”.</h1>
         <button  type="submit" class="btn btn-success message">Enter</button>
     </form>
